完善：配置处理逻辑对模块的支持更好 修复：TP采用控制及分级时模版js变量名出错

--- a/Application/Admin/View/Index/index.html
+++ b/Application/Admin/View/Index/index.html
@@ -1,6 +1,6 @@
 <extend name="_Layout/main"/>
 
-<block name="universal">
+<block name="var">
     "current_version": "{:C('CURRENT_VERSION')}",
     "check_version_url": "{:U('Admin/SystemUpdate/checkVersion')}",
     "index_url": "{:U('Index/index')}",
