--- a/Application/Admin/View/_Layout/main.html
+++ b/Application/Admin/View/_Layout/main.html
@@ -146,7 +146,7 @@
         <div class="container-fluid">
             <div id="universal">
                 <script type="text/javascript">
-                    var $universalObject{$Think.CONTROLLER_NAME} = {<block name='universal'></block>};
+                    var $_var_{$__ACTION_NAME__} = {<block name='var'></block>};
                 </script>
             </div>
             <script type="text/javascript" src="__PUBLIC__/js/admin.min.js?v={:C('STATIC_VERSION')}"></script>
