--- a/Application/Home/View/default/_Layout/main.html
+++ b/Application/Home/View/default/_Layout/main.html
@@ -252,7 +252,7 @@
         <div class="container-fluid">
             <div id="universal">
                 <script type="text/javascript">
-                    var $universalObject{$Think.CONTROLLER_NAME} = {<block name='universal'></block>};
+                    var $_var_{$__ACTION_NAME__} = {<block name='var'></block>};
                 </script>
             </div>
 
