完善：后台上传文件列表信息支持图片预览与文件图标 调整：前台图片资源文件夹结构

--- a/Application/Common/Builder/_builder.less
+++ b/Application/Common/Builder/_builder.less
@@ -21,6 +21,17 @@
         .builder-table {
             .panel {
                 margin-bottom: 0px;
+
+                .table {
+                    td {
+                        vertical-align: middle;
+
+                        img {
+                            max-width: 200px;
+                            max-height: 40px;
+                        }
+                    }
+                }
             }
         }
         .pagination {
