--- a/Application/Home/View/default/Document/index_manual.html
+++ b/Application/Home/View/default/Document/index_manual.html
@@ -175,7 +175,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <php>if(C('WEB_SITE_LOGO')):</php>
-                    <a class="navbar-brand" href="__ROOT__/"><img alt="logo" class="logo" src="{$Think.config.WEB_SITE_LOGO|get_cover='path'}"></a>
+                    <a class="navbar-brand" href="__ROOT__/"><img alt="logo" class="logo" src="{$Think.config.WEB_SITE_LOGO|get_cover}"></a>
                 <php>else:</php>
                     <a class="navbar-brand" href="__ROOT__/">{:C('WEB_SITE_TITLE')}</a>
                 <php>endif;</php>
