--- a/Application/Home/View/default/User/register.html
+++ b/Application/Home/View/default/User/register.html
@@ -85,7 +85,7 @@
             <div class="panel-heading">
                 <h3 class="panel-title text-center">
                     <php>if(C('WEB_SITE_LOGO')):</php>
-                        <a href="__ROOT__/"><img class="logo" src="{$Think.config.WEB_SITE_LOGO}"></a>
+                        <a href="__ROOT__/"><img class="logo" src="{$Think.config.WEB_SITE_LOGO|get_cover}"></a>
                     <php>else:</php>
                         <a href="__ROOT__/"><img class="logo" src="__HOME_IMG__/logo/logo_with_title.png"></a>
                     <php>endif;</php>
