--- a/Application/Admin/View/_Layout/_main.less
+++ b/Application/Admin/View/_Layout/_main.less
@@ -23,7 +23,7 @@
                 .panel-collapse {
                     .list-group {
                         .list-group-item {
-                            padding-left: 35px;
+                            padding-left: 20%;
                         }
                     }
                 }
