--- a/Application/Home/View/default/Document/index_default.html
+++ b/Application/Home/View/default/Document/index_default.html
@@ -79,9 +79,8 @@
                     {:hook('DocumentListAfter')}
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-3 form">
+            <div class="col-xs-12 col-sm-3 hidden-xs">
                 <a href="{:U('Document/add', array('cid' => $__CURRENT_CATEGORY__))}" class="btn btn-primary btn-block">发表</a>
-                <div class="blank"></div>
                 <div class="blank"></div>
 
                 <!-- 侧边导航 -->
