--- a/Application/Home/View/default/User/login.html
+++ b/Application/Home/View/default/User/login.html
@@ -10,16 +10,13 @@
             left: 0px;
             background: #2472b4;
         }
-
         .body-user-login .login-panel {
             margin-top: 10%;
         }
-
         .body-user-login .login-panel .panel-heading {
             height: 150px;
             background: transparent;
         }
-
         .body-user-login .login-panel .panel-heading .panel-title {
             color: #fff;
             font-size: 32px;
@@ -27,47 +24,43 @@
             padding-bottom: 5px;
             font-weight: lighter;
         }
-
         .body-user-login .login-panel .panel-heading .panel-title .logo {
             height: 60px;
             margin-top: -10px;
         }
-
         .body-user-login .login-panel .panel-heading .info {
             margin-top: 18px;
         }
-
         .body-user-login .login-panel .panel-body {
             padding: 20px;
         }
-
         .body-user-login .login-panel .panel-body .input-group input {
             height: 40px;
         }
-
         .body-user-login .login-panel .panel-body .input-group .input-group-addon .fa {
             width: 18px;
         }
-
         .body-user-login .login-panel .panel-body .input-group .verifyimg-box {
             padding: 0px;
         }
-
         .body-user-login .login-panel .panel-body .input-group .verifyimg-box .verifyimg {
             width: 138px;
             height: 38px;
             cursor: pointer;
             border-radius: 4px;
         }
-
         .body-user-login .bottom {
             margin-bottom: 10px;
             color: #eee;
             font-size: 12px;
         }
-
         .body-user-login .bottom a {
             color: #eee;
+        }
+        @media (max-width: 768px) {
+            .body-user-login .login-panel .panel-body {
+                padding: 15px 0px;
+            }
         }
     </style>
 </block>
