--- a/Application/Home/View/default/_Resource/css/main.css
+++ b/Application/Home/View/default/_Resource/css/main.css
@@ -61,6 +61,14 @@
     }
 }
 
+/* 面包屑导航
+-------------------------------------------------- */
+@media (max-width: 768px) {
+    #breadcrumb {
+        padding: 0px !important;
+    }
+}
+
 /* 底部样式
 -------------------------------------------------- */
 .footer .copyright {
