--- a/Application/Home/View/default/Document/detail_default.html
+++ b/Application/Home/View/default/Document/detail_default.html
@@ -96,7 +96,7 @@
                     {:hook('DocumentDetailAfter')}
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-3">
+            <div class="col-xs-12 col-sm-3 hidden-xs">
                 <!-- 侧边导航 -->
                 <div class="list-group">
                     <corethink:category_list name="vo" pid="$__CURRENT_CATEGORY__">
