--- a/Application/Home/View/default/Document/index_forum.html
+++ b/Application/Home/View/default/Document/index_forum.html
@@ -57,7 +57,7 @@
                     {:hook('DocumentListAfter')}
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-3">
+            <div class="col-xs-12 col-sm-3 hidden-xs">
                 <!-- 侧边导航 -->
                 <div class="list-group">
                     <corethink:category_list name="vo" pid="$__CURRENT_CATEGORY__">
