--- a/Application/Home/View/default/User/resetpassword.html
+++ b/Application/Home/View/default/User/resetpassword.html
@@ -1,7 +1,7 @@
 <extend name="_Layout/main"/>
 
 <block name="breadcrumb">
-    <div class="container">
+    <div id="breadcrumb" class="container">
         <ul class="breadcrumb">
             <li><i class="icon-location-arrow"></i></li>
             <li><a href="__ROOT__/">首页</a></li>
