--- a/Application/Admin/View/_Layout/main.html
+++ b/Application/Admin/View/_Layout/main.html
@@ -133,7 +133,8 @@
                         <div class="footer text-muted">
                             版权所有 © 2014-<php>echo date("Y",time());</php>
                             <a href="{:C('WEBSITE_DOMAIN')}" class="text-muted" target="_blank">{:C('PRODUCT_NAME')} v{:C('CURRENT_VERSION')}</a>
-                            <a href="{:C('WEBSITE_DOMAIN')}" class="text-muted" target="_blank">{:C('COMPANY_NAME')}</a>
+                            <a href="{:C('WEBSITE_DOMAIN')}" class="text-muted" target="_blank">{:C('COMPANY_NAME')}</a> 
+                            <a class="text-muted pull-right">项目开发团队：{:C('DEVELOP_TEAM')}</a>
                         </div>
                     </div>
 
