--- a/Application/Home/View/default/_Layout/main.html
+++ b/Application/Home/View/default/_Layout/main.html
@@ -100,7 +100,7 @@
             </block>
 
             <block name="main-nav">
-                <nav class="main-nav navbar navbar-default navbar-static-top" role="navigation">
+                <nav class="main-nav navbar navbar-default navbar-static-top" role="navigation" data-spy="affix" data-offset-top="50" data-offset-bottom="100">
                     <div class="container">
                         <div class="navbar-header">
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse-main">
@@ -124,6 +124,35 @@
                                     </li>
                                 </corethink:category_list>
                                 <li><a style="padding-left:20px;padding-right:20px;" href="__ROOT__/"><i class="fa fa-search fa-lg"></i></a></li>
+                            </ul>
+                            <ul class="nav navbar-nav navbar-right hidden">
+                                <present name="__USER__">
+                                    <li class="dropdown">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                            <i class="fa fa-user"></i>
+                                            <span class="<notempty name='__NEW_MESSAGE__'>red-dot</notempty>">
+                                                {$__USER__.username}
+                                            </span>
+                                            <span class="caret"></span>
+                                        </a>
+                                        <ul class="dropdown-menu">
+                                            <li><a href="{:U('Home/User/home')}"><i class="fa fa-home"></i> 个人主页</a></li>
+                                            <li><a href="{:U('Home/User/center')}"><i class="fa fa-tachometer"></i> 个人中心</a></li>
+                                            <li>
+                                                <a href="{:U('Home/UserMessage/index')}">
+                                                    <i class="fa fa-envelope"></i>
+                                                    <span class="<notempty name='__NEW_MESSAGE__'>red-dot</notempty>"> 消息中心 </span>
+                                                </a>
+                                            </li>
+                                            <li><a href="{:U('Home/Addon/index')}"><i class="fa fa-weixin"></i> 微＋平台</a></li>
+                                            <li class="divider hidden-xs"></li>
+                                            <li><a href="{:U('Home/User/logout')}" class="ajax-get"><i class="fa fa-sign-out"></i> 退出登录</a></li>
+                                        </ul>
+                                    </li>
+                                <else />
+                                    <li><a href="#" data-toggle="modal" data-target="#login-modal">登录</a></li>
+                                    <li><a href="{:U('Home/User/register')}">注册</a></li>
+                                </present>
                             </ul>
                         </div>
                     </div>
