--- a/Application/Home/View/default/_Resource/css/main.css
+++ b/Application/Home/View/default/_Resource/css/main.css
@@ -17,47 +17,79 @@
 
 /* 顶部导航及主导航样式
 -------------------------------------------------- */
-.top-nav{
+.full-header .top-nav{
     margin-bottom: 0px;
     z-index: 9999;
 }
-.main-nav {
+.full-header .main-nav {
     border: 0px;
     background-color: #fff;
     -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.08);
     -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.08);
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.08);
 }
-.main-nav .navbar-nav>li>a:hover {
+.full-header .main-nav .navbar-nav>li>a:hover {
     background-color: #009CEA;
     border-color: #009CEA;
     color: #fff;
 }
-.main-nav .navbar-nav>.active>a,
-.main-nav .navbar-nav>.active>a:focus,
-.main-nav .navbar-nav>.active>a:hover {
+.full-header .main-nav .navbar-nav>.active>a,
+.full-header .main-nav .navbar-nav>.active>a:focus,
+.full-header .main-nav .navbar-nav>.active>a:hover {
     background-color: #009CEA;
     border-color: #009CEA;
     color: #fff;
 }
-.main-nav .navbar-brand .logo {
+.full-header .main-nav .navbar-brand .logo {
     height: 32px;
     margin: -6px 0px;
 }
 @media (min-width: 768px) {
-    .top-nav {
+    .full-header .top-nav {
         min-height: 30px;
     }
-    .top-nav .navbar-nav>li>a {
+    .full-header .top-nav .navbar-nav>li>a {
         padding: 5px;
         font-size:12px;
     }
-    .main-nav .navbar-nav>li>a {
+    .full-header .main-nav .navbar-nav>li>a {
         padding: 32px 45px;
     }
-    .main-nav .navbar-brand .logo {
+    .full-header .main-nav .navbar-brand .logo {
         height: 60px;
         margin: -5px 0px;
+    }
+}
+@media (max-width: 768px) {
+    .full-header .main-nav {
+        margin-bottom: 0px;
+    }
+}
+
+/* Bootstrap的affix插件
+-------------------------------------------------- */
+.full-header .main-nav.affix {
+    top: 0px;
+    left: 0px;
+    right: 0px;
+}
+.full-header .main-nav.affix .navbar-brand .logo {
+    height: 26px;
+    margin: -6px 0px;
+}
+@media (min-width: 768px) {
+    .full-header .main-nav.affix .navbar-nav>li>a {
+        padding: 15px 25px;
+    }
+    .full-header .main-nav.affix .navbar-brand .logo {
+        height: 26px;
+        margin: -5px 0px;
+    }
+    .full-header .main-nav.affix .navbar-right:first-child {
+        float: left !important;
+    }
+    .full-header .main-nav.affix .navbar-right.hidden {
+        display: block !important;
     }
 }
 
