--- a/Application/Home/View/default/_Layout/main.html
+++ b/Application/Home/View/default/_Layout/main.html
@@ -37,70 +37,10 @@
 
     <block name="wrap">
         <div class="clearfix full-header">
-            <block name="top-nav">
-                <nav class="top-nav navbar navbar-inverse navbar-static-top hidden-xs">
-                    <div class="container">
-                        <div class="navbar-header">
-                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse-top">
-                                <span class="sr-only">切换导航</span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </button>
-                        </div>
-                        <div class="collapse navbar-collapse navbar-collapse-top">
-                            <ul class="nav navbar-nav" style="margin-left:-10px" >
-                                <li><a href="#">联系方式：</a></li>
-                                <li><a href="mailto:admin@corethink.cn"><i class="fa fa-envelope"></i></a></li>
-                                <li><a href="#" tabindex="0" role="button" data-toggle="popover" data-trigger="hover" data-placement="bottom"
-                                    title="QQ联系" data-html="true" data-content="<div style='width:120px;'><ul class='list-unstyled'><li>技术：598821125</li><li>销售：603550095</li><li>市场：550138282</li></ul></div>">
-                                    <i class="fa fa-qq"></i></a>
-                                </li>
-                                <li><a href="#" data-html="true" tabindex="0" role="button" data-toggle="popover" data-trigger="hover" data-placement="bottom"
-                                    title="微信扫一扫" data-html="true" data-content="<img src='__HOME_IMG__/logo/weixin_gh_ce5447812a60.jpg'>">
-                                    <i class="fa fa-weixin"></i></a>
-                                </li>
-                                <li><a target="_blank" href="http://weibo.com/u/5667168319"><i class="fa fa-weibo"></i></a></li>
-                            </ul>
-                            <ul class="nav navbar-nav navbar-right">
-                                <li><a href="#">您好，欢迎来到{:C('WEB_SITE_TITLE')} ！</a></li>
-                                <li><a href="{:C('WEBSITE_DOMAIN')}">协议</a></li>
-                                <li><a href="{:C('WEBSITE_DOMAIN')}" target="_blank">手册</a></li>
-                                <present name="__USER__">
-                                    <li class="dropdown">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                            <i class="fa fa-user"></i>
-                                            <span class="<notempty name='__NEW_MESSAGE__'>red-dot</notempty>">
-                                                {$__USER__.username}
-                                            </span>
-                                            <span class="caret"></span>
-                                        </a>
-                                        <ul class="dropdown-menu">
-                                            <li><a href="{:U('Home/User/home')}"><i class="fa fa-home"></i> 个人主页</a></li>
-                                            <li><a href="{:U('Home/User/center')}"><i class="fa fa-tachometer"></i> 个人中心</a></li>
-                                            <li>
-                                                <a href="{:U('Home/UserMessage/index')}">
-                                                    <i class="fa fa-envelope"></i>
-                                                    <span class="<notempty name='__NEW_MESSAGE__'>red-dot</notempty>"> 消息中心 </span>
-                                                </a>
-                                            </li>
-                                            <li><a href="{:U('Home/Addon/index')}"><i class="fa fa-weixin"></i> 微＋平台</a></li>
-                                            <li class="divider hidden-xs"></li>
-                                            <li><a href="{:U('Home/User/logout')}" class="ajax-get"><i class="fa fa-sign-out"></i> 退出登录</a></li>
-                                        </ul>
-                                    </li>
-                                <else />
-                                    <li><a href="#" data-toggle="modal" data-target="#login-modal">登录</a></li>
-                                    <li><a href="{:U('Home/User/register')}">注册</a></li>
-                                </present>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
-            </block>
+            <block name="top-nav"></block>
 
             <block name="main-nav">
-                <nav class="main-nav navbar navbar-default navbar-static-top" role="navigation" data-spy="affix" data-offset-top="50" data-offset-bottom="100">
+                <nav class="main-nav navbar navbar-default navbar-fixed-top clearfix" role="navigation">
                     <div class="container">
                         <div class="navbar-header">
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse-main">
@@ -116,7 +56,7 @@
                             <php>endif;</php>
                         </div>
                         <div class="collapse navbar-collapse navbar-collapse-main">
-                            <ul class="nav navbar-nav navbar-right">
+                            <ul class="nav navbar-nav navbar-left">
                                 <li><a href="__ROOT__/">首页</a></li>
                                 <corethink:category_list name="vo">
                                     <li <if condition='$vo.id eq $__CURRENT_CATEGORY__'> class="active"</if> >
@@ -125,7 +65,7 @@
                                 </corethink:category_list>
                                 <li><a style="padding-left:20px;padding-right:20px;" href="__ROOT__/"><i class="fa fa-search fa-lg"></i></a></li>
                             </ul>
-                            <ul class="nav navbar-nav navbar-right hidden">
+                            <ul class="nav navbar-nav navbar-right">
                                 <present name="__USER__">
                                     <li class="dropdown">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
