--- a/Application/Home/View/default/_Resource/css/main.css
+++ b/Application/Home/View/default/_Resource/css/main.css
@@ -15,12 +15,13 @@
     background: #fff;
 }
 
+
 /* 顶部导航及主导航样式
 -------------------------------------------------- */
-.full-header .top-nav{
-    margin-bottom: 0px;
-    z-index: 9999;
+body {
+    padding-top: 50px;
 }
+
 .full-header .main-nav {
     border: 0px;
     background-color: #fff;
@@ -44,62 +45,21 @@
     height: 32px;
     margin: -6px 0px;
 }
-@media (min-width: 768px) {
-    .full-header .top-nav {
-        min-height: 30px;
-    }
-    .full-header .top-nav .navbar-nav>li>a {
-        padding: 5px;
-        font-size:12px;
-    }
-    .full-header .main-nav .navbar-nav>li>a {
-        padding: 32px 45px;
-    }
-    .full-header .main-nav .navbar-brand .logo {
-        height: 60px;
-        margin: -5px 0px;
-    }
-}
-@media (max-width: 768px) {
-    .full-header .main-nav {
-        margin-bottom: 0px;
-    }
-}
 
-/* Bootstrap的affix插件
--------------------------------------------------- */
-.full-header .main-nav.affix {
-    top: 0px;
-    left: 0px;
-    right: 0px;
-}
-.full-header .main-nav.affix .navbar-brand .logo {
-    height: 26px;
-    margin: -6px 0px;
-}
-@media (min-width: 768px) {
-    .full-header .main-nav.affix .navbar-nav>li>a {
-        padding: 15px 25px;
-    }
-    .full-header .main-nav.affix .navbar-brand .logo {
-        height: 26px;
-        margin: -5px 0px;
-    }
-    .full-header .main-nav.affix .navbar-right:first-child {
-        float: left !important;
-    }
-    .full-header .main-nav.affix .navbar-right.hidden {
-        display: block !important;
-    }
-}
 
 /* 面包屑导航
 -------------------------------------------------- */
+@media (min-width: 768px) {
+    #breadcrumb {
+        margin-top: 15px;
+    }
+}
 @media (max-width: 768px) {
     #breadcrumb {
         padding: 0px !important;
     }
 }
+
 
 /* 底部样式
 -------------------------------------------------- */
