--- a/Application/Home/View/default/User/resetpassword.html
+++ b/Application/Home/View/default/User/resetpassword.html
@@ -115,6 +115,8 @@
                     var filter  = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
                     if(!filter.test(email)){
                         $.alertMessager('邮箱账号不正确', 'danger');
+                        $(that).addClass('disabled').prop('disabled', true);
+                        time(that, 5);
                     }else{
                         $(that).addClass('disabled').prop('disabled', true);
                         time(that, 30);
@@ -139,6 +141,8 @@
                     var filter  = /^1\d{10}$/;
                     if(!filter.test(mobile)){
                         $.alertMessager('手机号码不正确', 'danger');
+                        $(that).addClass('disabled').prop('disabled', true);
+                        time(that, 5);
                     }else{
                         $(that).addClass('disabled').prop('disabled', true);
                         time(that, 30);
