新增：后台消息管理功能

--- a/Application/Common/Builder/_builder.less
+++ b/Application/Common/Builder/_builder.less
@@ -24,6 +24,7 @@
 
                 .table {
                     td {
+                        max-width: 600px;
                         vertical-align: middle;
 
                         img {
