优化：后台新增消息采用系统消息通用接口 优化：模板界面

--- a/Application/Admin/View/Index/_index.less
+++ b/Application/Admin/View/Index/_index.less
@@ -16,5 +16,8 @@
                 text-indent: 28px;
             }
         }
+        .footer {
+            margin-bottom: 15px;
+        }
     }
 }
