--- a/Application/Admin/View/Index/index.html
+++ b/Application/Admin/View/Index/index.html
@@ -118,23 +118,24 @@
                                         <td>联系我们</td>
                                         <td>
                                             <span>
-                                            	<a href="mailto:admin@corethink.cn"><i class="fa fa-envelope"></i></a>
+                                                <a href="mailto:admin@corethink.cn"><i class="fa fa-envelope"></i></a>
                                             </span>
-											<span>
-												<a href="#" tabindex="0" role="button" data-toggle="popover" data-trigger="hover" data-placement="bottom"
-													title="QQ联系" data-html="true" data-content="<div style='width:120px;'><ul class='list-unstyled'><li>技术：598821125</li><li>销售：603550095</li><li>市场：550138282</li></ul></div>">
-													<i class="fa fa-qq"></i>
-												</a>
-											</span>
-											<span>
-												<a href="#" data-html="true" tabindex="0" role="button" data-toggle="popover" data-trigger="hover" data-placement="bottom"
-													title="微信扫一扫" data-html="true" data-content="<img src='__HOME_IMG__/logo/weixin_gh_ce5447812a60.jpg'>">
-													<i class="fa fa-weixin"></i>
-												</a>
-											</span>
-											<span>
-												<a target="_blank" href="http://weibo.com/u/5667168319"><i class="fa fa-weibo"></i></a>
-											</span>
+                                            <span>
+                                                <a href="#" tabindex="0" role="button" data-toggle="popover" data-trigger="hover" data-placement="bottom"
+                                                    title="QQ联系" data-html="true" data-content="<div style='width:120px;'><ul class='list-unstyled'><li>技术：598821125</li><li>销售：603550095</li><li>市场：550138282</li></ul></div>">
+                                                    <i class="fa fa-qq"></i>
+                                                </a>
+                                            </span>
+                                            <span>
+                                                <a href="#" data-html="true" tabindex="0" role="button" data-toggle="popover" data-trigger="hover" data-placement="bottom"
+                                                    data-template='<div class="popover" role="tooltip"><div class="arrow"></div><h3 class="popover-title"></h3><div class="popover-content" style="padding:0px;width:200px;"></div></div>'
+                                                    title="微信扫一扫" data-html="true" data-content="<img class='img-responsive' src='__HOME_IMG__/logo/weixin_gh_ce5447812a60.jpg'>">
+                                                    <i class="fa fa-weixin"></i>
+                                                </a>
+                                            </span>
+                                            <span>
+                                                <a target="_blank" href="http://weibo.com/u/5667168319"><i class="fa fa-weibo"></i></a>
+                                            </span>
                                         </td>
                                     </tr>
                                 </tbody>
@@ -166,6 +167,13 @@
 
             </div>
         </div>
+
+
+        <div class="footer text-muted">
+            <span>版权所有 © 2014-<php>echo date("Y",time());</php></span>
+            <a href="{:C('WEBSITE_DOMAIN')}" class="text-muted" target="_blank">{:C('PRODUCT_NAME')} v{:C('CURRENT_VERSION')}</a>
+            <a href="{:C('WEBSITE_DOMAIN')}" class="text-muted" target="_blank">{:C('COMPANY_NAME')}</a> 
+            <a class="text-muted pull-right">项目开发团队：{:C('DEVELOP_TEAM')}</a>
+        </div>
     </div>
 </block>
-
