--- a/Application/Admin/View/_Layout/main.html
+++ b/Application/Admin/View/_Layout/main.html
@@ -131,7 +131,7 @@
                         <block name="main"></block>
 
                         <div class="footer text-muted">
-                            版权所有 © 2014-<php>echo date("Y",time());</php>
+                            <span>版权所有 © 2014-<php>echo date("Y",time());</php></span>
                             <a href="{:C('WEBSITE_DOMAIN')}" class="text-muted" target="_blank">{:C('PRODUCT_NAME')} v{:C('CURRENT_VERSION')}</a>
                             <a href="{:C('WEBSITE_DOMAIN')}" class="text-muted" target="_blank">{:C('COMPANY_NAME')}</a> 
                             <a class="text-muted pull-right">项目开发团队：{:C('DEVELOP_TEAM')}</a>
