--- a/Public/libs/bootstrap_extend/css/bootstrap-extend.css
+++ b/Public/libs/bootstrap_extend/css/bootstrap-extend.css
@@ -7,6 +7,9 @@
 .btn-pills {
     border-radius: 20px
 }
+.inline-block {
+    display: inline-block;
+}
 .text-overflow {
     overflow: hidden;
     text-overflow: ellipsis;
